<resources>
    <!-- App title -->
    <string name="app_name">Entrevoisins</string>

    <!-- activity_list_neighbour.xml -->
    <string name="tab_neighbour_title">My neighbours</string>
    <string name="tab_favorites_title">Favorites</string>

    <!-- activity_add_neighbour.xml -->
    <string name="new_neighbour">New neighbour</string>
    <string name="modify_neighbour">Modify neighbour</string>

    <!-- activity_info_neighbour.xml -->
    <string name="title_about_me">A propos de moi</string>
    <string name="hint_name">Name</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_website">Website</string>
    <string name="hint_address">Address</string>
    <string name="hint_about_me">About me</string>
    <string name="text_save_button">Save</string>

    <!-- The following string values are for testing layouts (default values) -->
    <string name="name_on_avatar">Caroline</string>
    <string name="title_name_neighbour">Caroline</string>
    <string name="location_neighbour">Saint pierre du mont à 5km</string>
    <string name="phone_neighbour">+33 6 86 57 90 14</string>
    <string name="website_neighbour">www.facebook.fr/caroline</string>
    <string name="txt_about_me_neighbour">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse
    lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam.
    Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie,
        enim est eleifend mi, non fermentum diam nisl sit amet erat. </string>

    <!-- fragment_favorite_list.xml -->
    <string name="no_favorites">No favorites</string>

    <!-- menu_info_neighbour.xml -->
    <string name="menu_info_edit_title">Edit</string>
</resources>
