<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.neighbour_list.InfoNeighbourActivity"
    android:background="@color/colorBackground">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_activity_info"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_weight="1"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/colorToolbar"
        />
    
    <ImageView
        android:id="@+id/avatar_neighbour"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@color/colorPrimary"/> <!-- TODO : color to delete later when loading image problem will be solved-->


    <TextView
        android:id="@+id/name_on_avatar_neighbour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/avatar_neighbour"
        android:text="@string/name_on_avatar"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        android:layout_marginBottom="25dp"
        android:layout_marginStart="15dp"/>

    <LinearLayout
        android:id="@+id/info_contact_p1_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatar_neighbour"
        android:orientation="vertical"
        android:background="@drawable/shape_layout"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:elevation="5dp">

        <TextView
            android:id="@+id/title_name_neighbour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_name_neighbour"
            android:textColor="#000000"
            android:textSize="22sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="12dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLine"/>
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:useDefaultMargins="true"
            >
            <ImageView
                android:src="@drawable/ic_place_pink_24dp"
                android:layout_column="0"
                android:layout_row="0"/>
            <TextView
                android:id="@+id/location_neighbour"
                android:text="@string/location_neighbour"
                android:layout_column="1"
                android:layout_row="0"
                android:layout_marginStart="10dp"/>
        </GridLayout>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="1"
            android:paddingStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:useDefaultMargins="true">
            <ImageView
                android:src="@drawable/ic_call_pink_24dp"
                android:layout_column="0"
                android:layout_row="0"/>
            <TextView
                android:id="@+id/phone_neighbour"
                android:text="@string/phone_neighbour"
                android:layout_column="1"
                android:layout_row="0"
                android:layout_marginStart="10dp"/>
        </GridLayout>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:useDefaultMargins="true">
            <ImageView
                android:src="@drawable/ic_language_pink_24dp"
                android:layout_column="0"
                android:layout_row="0"/>
            <TextView
                android:id="@+id/website_neighbour"
                android:text="@string/website_neighbour"
                android:layout_column="1"
                android:layout_row="0"
                android:layout_marginStart="10dp"/>
        </GridLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_on_avatar_neighbour"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/flBtnFavoriteColor"
        android:src="@drawable/ic_star_yellow_24dp"/>

    <LinearLayout
        android:id="@+id/info_contact_p2_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_contact_p1_layout"
        android:orientation="vertical"
        android:background="@drawable/shape_layout"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:elevation="5dp">

        <TextView
            android:id="@+id/title_about_me_neighbour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_about_me"
            android:textColor="#000000"
            android:textSize="22sp"
            android:paddingStart="10dp"
            android:paddingTop="12dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLine"/>

        <TextView
            android:id="@+id/text_about_me_neighbour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_about_me_neighbour"
            android:textSize="12sp"
            android:paddingStart="10dp"
            android:paddingTop="12dp"
            android:paddingBottom="10dp"
            android:minHeight="60dp"
            android:maxLines="5"
            />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>